--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <title>My Portfolio</title>
+</head>
+<body>
+  <h1>Welcome to My GitHub Page</h1>
+  <p>Here I'll share my projects and blog posts about data analysis.</p>
+</body>
+</html>
